# PythonWEB_HW9

./: .gitignore
PyWEB_HW9/: authors.json  main.py
PythonWEB_HW9/: pyproject.toml
WebHW07/: config.ini  main.py  pyproject.toml  seeds.py
WebHW07/database/: db.py
WebHW07/migrations/: env.py
WebHW07/migrations/versions/: 685d00140921_init.py
main/: main.py
